feat: 구분자가 아닌 문자 입력시 IllegalArgumentException 출력